--- a/index.html
+++ b/index.html
@@ -27,7 +27,16 @@
     </nav>
 
         <!-- Home  -->
-    
+    <section id="home">
+        <h2>Enhance your Future With TechEducation</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At itaque, 
+            hic vel qui cumque impedit quaerat delectus debitis nemo magnam,
+            consectetur adipisicing elit quaerat delectus debitis nemo magnam?</p>
+            <div class="btn">
+                <a class="blue" href="#">Learn More</a>
+                <a class="yellow" href="#">Visit Courses</a>
+            </div>
+    </section> 
 
 </body>
 </html>
