--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Education is Power</title>
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link rel="stylesheet" href="style.css">
 
 
@@ -37,6 +39,35 @@
                 <a class="yellow" href="#">Visit Courses</a>
             </div>
     </section> 
+    
+        <!-- features -->
+    <section id="features">
+        <h1>Awsome Features</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut, modi!</p>
+        <div class="fea-base">
+            <div class="fea-box">
+                <i class="fa-solid fa-graduation-cap"></i>
+                <h3>Scholarship Facility</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, natus!</p>
+            </div>
+
+            <div class="fea-box">
+                <i class="fa-solid fa-certificate"></i>
+                <h3>Dell Online Courses</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, natus!</p>
+            </div>
+
+            <div class="fea-box">
+                <i class="fa-solid fa-award"></i>
+                <h3>Global certification</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, natus!</p>
+            </div>
+
+        </div>
+    </section>
+
+
+    
 
 </body>
 </html>
