--- a/index.html
+++ b/index.html
@@ -67,6 +67,132 @@
     </section>
 
 
+    <!-- Courses -->
+
+    <section id="course">
+        <h1>Our Popular Course</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut, modi!</p>
+        
+        <div class="course-box">
+
+            <div class="course">
+                <img src="images/c1.jpg">
+                <div class="details">
+                    <span>Updated 21/04/22</span>
+                    <h6>Javascript Beginners Course</h6>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <span>(239)</span>
+                    </div>
+                </div>
+                <div class="cost">
+                    $80.99
+                </div>
+            </div>
+
+            <div class="course">
+                <img src="images/c2.jpg">
+                <div class="details">
+                    <span>Updated 21/04/22</span>
+                    <h6>HTML & CSS Course</h6>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <span>(239)</span>
+                    </div>
+                </div>
+                <div class="cost">
+                    $80.99
+                </div>
+            </div>
+
+            <div class="course">
+                <img src="images/c3.jpg">
+                <div class="details">
+                    <span>Updated 21/04/22</span>
+                    <h6>Python Beginners Course</h6>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <span>(239)</span>
+                    </div>
+                </div>
+                <div class="cost">
+                    $80.99
+                </div>
+            </div>
+
+            <div class="course">
+                <img src="images/c4.jpg">
+                <div class="details">
+                    <span>Updated 21/04/22</span>
+                    <h6>NFT Beginners Course</h6>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <span>(239)</span>
+                    </div>
+                </div>
+                <div class="cost">
+                    $80.99
+                </div>
+            </div>
+
+            <div class="course">
+                <img src="images/c5.jpg">
+                <div class="details">
+                    <span>Updated 21/04/22</span>
+                    <h6>.NET Beginners Course</h6>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <span>(239)</span>
+                    </div>
+                </div>
+                <div class="cost">
+                    $80.99
+                </div>
+            </div>
+
+            <div class="course">
+                <img src="images/c6.jpg">
+                <div class="details">
+                    <span>Updated 21/04/22</span>
+                    <h6>Angular Course</h6>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <span>(239)</span>
+                    </div>
+                </div>
+                <div class="cost">
+                    $80.99
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+
     
 
 </body>
